Add name of project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1st_practice_project",
+  "name": "1st_Javascript_Concept_in_react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
